# MARBLE

./: .gitignore  README.md  cli.py  download.py  pyproject.toml  run.sh  run2.sh  setup.py
configs/: fewshot.MERT-v1-95M.GTZANGenre.yaml  finetune.MERT-v1-95M.GTZANGenre.yaml  probe.CLaMP3.GTZANGenre.yaml  probe.CLaMP3.MTGGenre.yaml  probe.CLaMP3.MTGInstrument.yaml  probe.CLaMP3.MTGMood.yaml  probe.CLaMP3.MTGTop50.yaml  probe.CLaMP3.MTT.yaml  probe.DaSheng.GTZANGenre.yaml  probe.MERT-v1-95M.Chords1217.yaml  probe.MERT-v1-95M.EMO.yaml  probe.MERT-v1-95M.GS.yaml  probe.MERT-v1-95M.GTZANBeatTracking.yaml  probe.MERT-v1-95M.GTZANGenre.yaml  probe.MERT-v1-95M.HookTheoryKey.yaml  probe.MERT-v1-95M.MTGGenre.yaml  probe.MERT-v1-95M.MTGInstrument.yaml  probe.MERT-v1-95M.MTGMood.yaml  probe.MERT-v1-95M.MTGTop50.yaml  probe.MERT-v1-95M.MTT.yaml  probe.MERT-v1-95M.MergeGSHT.yaml  probe.MuQ.Chords1217.yaml  probe.MuQ.EMO.yaml  probe.MuQ.GS.yaml  probe.MuQ.GTZANBeatTracking.100hz.yaml  probe.MuQ.GTZANBeatTracking.yaml  probe.MuQ.GTZANGenre.yaml  probe.MuQ.HookTheoryKey.yaml  probe.MuQ.HookTheoryStructure.yaml  probe.MuQ.MTGGenre.yaml  probe.MuQ.MTGInstrument.yaml  probe.MuQ.MTGMood.yaml  probe.MuQ.MTGTop50.yaml  probe.MuQ.MTT.yaml  probe.MuQ.MergeGSHT.yaml  probe.MuQMuLan.MTGGenre.yaml  probe.MuQMuLan.MTGInstrument.yaml  probe.MuQMuLan.MTGMood.yaml  probe.MuQMuLan.MTGTop50.yaml  probe.MuQMuLan.MTT.yaml  (+68 more)
scripts/: fewshot.MERT-v1-95M.GTZANGenre.sh  finetune.MERT-v1-95M.GTZANGenre.sh  probe.CLaMP3.GTZANGenre.sh  probe.CLaMP3.MTGGenre.sh  probe.CLaMP3.MTGInstrument.sh  probe.CLaMP3.MTT.sh  (+54 more)
(+118 files in other folders)
